force-app/main/default/objects/Student__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>istanbul</fullName>
            </value>
            <value>
                <fullName>ankara</fullName>
            </value>
            <value>
                <fullName>amsterdam</fullName>
            </value>
            <value>
                <fullName>utrecht</fullName>
            </value>
            <value>
                <fullName>london</fullName>
            </value>
            <value>
                <fullName>new york</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>