force-app/main/default/objects/Student__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country*</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turkey</fullName>
            </value>
            <value>
                <fullName>Nederland</fullName>
            </value>
            <value>
                <fullName>Usa</fullName>
            </value>
            <value>
                <fullName>Uk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>