force-app/main/default/objects/Student__c/fields/Formulaa__c.field-meta.xml
<CustomField>
    <fullName>Formulaa__c</fullName>
    <formula>IF (HOUR(interviwe_Time__c) &gt; 8 &amp;&amp; HOUR(interviwe_Time__c) &lt; 18, 
&quot;I LOVE SALESFORCE&quot;,&quot;I HATE SALESFORCE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formulaa</label>
    <type>Text</type>
</CustomField>