force-app/main/default/objects/Student__c/fields/ID_seri_no__c.field-meta.xml
<CustomField>
    <fullName>ID_seri_no__c</fullName>
    <label>ID seri no</label>
    <length>10</length>
    <type>Text</type>
</CustomField>