force-app/main/default/objects/Student__c/fields/interviwe_Time__c.field-meta.xml
<CustomField>
    <fullName>interviwe_Time__c</fullName>
    <label>interviwe Time</label>
    <type>Time</type>
</CustomField>