force-app/main/default/objects/Student__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State*</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>akdeniz</fullName>
            </value>
            <value>
                <fullName>karadeniz</fullName>
            </value>
            <value>
                <fullName>ege</fullName>
            </value>
            <value>
                <fullName>marmara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>