force-app/main/default/objects/Student__c/fields/yas__c.field-meta.xml
<CustomField>
    <fullName>yas__c</fullName>
    <formula>YEAR(TODAY())   -   YEAR(BirthOfDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>yas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>