force-app/main/default/objects/Student__c/recordTypes/Corporate_Candidate.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Candidate</fullName>
    <active>true</active>
    <description>Corporate Candidate pagelayout ile birlikte kullanilacak</description>
    <label>Corporate Candidate</label>
</RecordType>