force-app/main/default/objects/Student__c/recordTypes/Personal_Candidate.recordType-meta.xml
<RecordType>
    <fullName>Personal_Candidate</fullName>
    <active>true</active>
    <label>Personal Candidate</label>
</RecordType>