force-app/main/default/objects/Student__c/validationRules/SeriNoFormatError.validationRule-meta.xml
<ValidationRule>
    <fullName>SeriNoFormatError</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( ID_seri_no__c , &quot;([A-Za-z]{7})?&quot;) )</errorConditionFormula>
    <errorMessage>7 karakter</errorMessage>
</ValidationRule>